# ability_dmsfwk

./: .claude-reminder.md  .gitignore  AGENT.md  CLAUDE.md  bundle.json  commit-message-skill.md  dmsfwk.gni
frameworks/native/distributed_extension/ets/: @ohos.application.DistributedExtensionAbility.ets  @ohos.application.DistributedExtensionContext.ets  BUILD.gn
interfaces/innerkits/common/: BUILD.gn  DeviceConnectStatus.idl  IDistributedAbilityManager.idl
interfaces/innerkits/common/include/: distributed_ability_manager_client.h  distributed_extension_types.h  distributed_intent_plugin.h  distributed_intent_provider.h  distributed_intent_service_interface.h  distributed_sched_types.h  dms_constant.h  dms_interface_structure.h  dms_softbus_structure.h  idms_interactive_adapter.h  service_collaboration_manager_capi.h
interfaces/taihe/: BUILD.gn
interfaces/taihe/etsContinueManager/: BUILD.gn
interfaces/taihe/etsContinueManager/idl/: ohos.app.ability.continueManager.taihe
interfaces/taihe/etsContinueManager/include/: ani_continue_client.h  ani_continue_manager.h  ani_continue_manager_stub.h
interfaces/taihe/etsContinueManager/src/: ani_constructor.cpp  ani_continue_client.cpp  ani_continue_manager.cpp  (+2 more)
interfaces/taihe/idl/: ohos.distributedsched.abilityConnectionManager.taihe
interfaces/taihe/include/: dmsfwk_taihe_utils.h  taihe_error_code.h
interfaces/taihe/src/: ani_constructor.cpp  dmsfwk_taihe_utils.cpp  ohos.distributedsched.abilityConnectionManager.impl.cpp
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/abilityconnectionwrapperstub_fuzzer/: BUILD.gn  abilityconnectionwrapperstub_fuzzer.cpp
test/fuzztest/bundlemanagercallbackstub_fuzzer/: BUILD.gn
test/fuzztest/continuationmanager_fuzzer/: BUILD.gn  continuationmanager_fuzzer.cpp
test/fuzztest/distributedintentdsoftbusadapter_fuzzer/: BUILD.gn  distributedintentdsoftbusadapter_fuzzer.cpp  distributedintentdsoftbusadapter_fuzzer.h  softbus_stub.cpp  softbus_stub.h
test/fuzztest/distributedintentservice_fuzzer/: distributedintentservice_fuzzer.cpp  distributedintentservice_fuzzer.h
test/fuzztest/distributedintentservicestub_fuzzer/: BUILD.gn  distributedintentservicestub_fuzzer.cpp  distributedintentservicestub_fuzzer.h
test/fuzztest/distributedintentstub_fuzzer/: distributedintentstub_fuzzer.cpp  distributedintentstub_fuzzer.h
test/fuzztest/distributedoperation_fuzzer/: BUILD.gn  distributedoperation_fuzzer.cpp  distributedoperation_fuzzer.h
test/fuzztest/distributedschedservice_fuzzer/: BUILD.gn  distributedschedservice_fuzzer.cpp  distributedschedservice_fuzzer.h
test/fuzztest/distributedschedserviceeight_fuzzer/: distributedschedserviceeight_fuzzer.cpp  distributedschedserviceeight_fuzzer.h
test/fuzztest/distributedschedservicefive_fuzzer/: distributedschedservicefive_fuzzer.cpp  distributedschedservicefive_fuzzer.h
test/fuzztest/distributedschedservicefour_fuzzer/: distributedschedservicefour_fuzzer.cpp  distributedschedservicefour_fuzzer.h
test/fuzztest/distributedschedservicenine_fuzzer/: distributedschedservicenine_fuzzer.cpp  distributedschedservicenine_fuzzer.h
test/fuzztest/distributedschedserviceone_fuzzer/: distributedschedserviceone_fuzzer.cpp  distributedschedserviceone_fuzzer.h
test/fuzztest/distributedschedserviceseven_fuzzer/: distributedschedserviceseven_fuzzer.cpp  distributedschedserviceseven_fuzzer.h
test/fuzztest/distributedschedservicesix_fuzzer/: distributedschedservicesix_fuzzer.cpp  distributedschedservicesix_fuzzer.h
test/fuzztest/distributedschedservicethree_fuzzer/: distributedschedservicethree_fuzzer.cpp  distributedschedservicethree_fuzzer.h
test/fuzztest/distributedschedservicetwo_fuzzer/: distributedschedservicetwo_fuzzer.cpp  distributedschedservicetwo_fuzzer.h
test/fuzztest/distributedschedstub_fuzzer/: BUILD.gn  distributedschedstub_fuzzer.cpp
test/fuzztest/distributedschedstubeight_fuzzer/: distributedschedstubeight_fuzzer.cpp  distributedschedstubeight_fuzzer.h
test/fuzztest/distributedschedstubeleven_fuzzer/: distributedschedstubeleven_fuzzer.cpp  distributedschedstubeleven_fuzzer.h
test/fuzztest/distributedschedstubfive_fuzzer/: distributedschedstubfive_fuzzer.cpp  distributedschedstubfive_fuzzer.h
test/fuzztest/distributedschedstubfour_fuzzer/: distributedschedstubfour_fuzzer.cpp  distributedschedstubfour_fuzzer.h
test/fuzztest/distributedschedstubnine_fuzzer/: distributedschedstubnine_fuzzer.cpp  distributedschedstubnine_fuzzer.h
test/fuzztest/distributedschedstubone_fuzzer/: distributedschedstubone_fuzzer.cpp  distributedschedstubone_fuzzer.h
test/fuzztest/distributedschedstubseven_fuzzer/: distributedschedstubseven_fuzzer.cpp  distributedschedstubseven_fuzzer.h
test/fuzztest/distributedschedstubsix_fuzzer/: distributedschedstubsix_fuzzer.cpp  distributedschedstubsix_fuzzer.h
test/fuzztest/distributedschedstubten_fuzzer/: distributedschedstubten_fuzzer.cpp  distributedschedstubten_fuzzer.h
test/fuzztest/distributedschedstubthree_fuzzer/: distributedschedstubthree_fuzzer.cpp  distributedschedstubthree_fuzzer.h
test/fuzztest/distributedschedstubtwo_fuzzer/: distributedschedstubtwo_fuzzer.cpp  distributedschedstubtwo_fuzzer.h
test/fuzztest/distributedwant_fuzzer/: BUILD.gn  distributedwant_fuzzer.cpp
test/fuzztest/distributedwantparams_fuzzer/: BUILD.gn  distributedwantparams_fuzzer.cpp
test/fuzztest/dmsfreeinstallcallbackstub_fuzzer/: BUILD.gn  dmsfreeinstallcallbackstub_fuzzer.cpp
test/fuzztest/dschedallconnectmanager_fuzzer/: BUILD.gn
test/fuzztest/dschedassemble_fuzzer/: BUILD.gn  dschedassemble_fuzzer.cpp  dschedassemble_fuzzer.h
test/fuzztest/dschedsoftbussession_fuzzer/: BUILD.gn  dschedsoftbussession_fuzzer.cpp
test/fuzztest/dschedtransportsoftbusadapter_fuzzer/: BUILD.gn  dschedtransportsoftbusadapter_fuzzer.cpp
test/fuzztest/multiusermanager_fuzzer/: BUILD.gn  multiusermanager_fuzzer.cpp
test/fuzztest/remoteintentmanager_fuzzer/: BUILD.gn  remoteintentmanager_fuzzer.cpp  remoteintentmanager_fuzzer.h
test/fuzztest/softbusadapter_fuzzer/: BUILD.gn  softbusadapter_fuzzer.cpp
(+528 files in other folders)
