# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/ability/dmsfwk/dmsfwk.gni")

config("test_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${dms_path}/common/include/",
    "${dms_path}/common/include/continue/",
    "${dms_path}/frameworks/native/distributed_extension/include/ipc/",
    "${dms_path}/interfaces/innerkits/common/include/",
    "${dms_path}/interfaces/kits/napi/include/",
    "${dms_path}/services/dtbschedmgr/include/",
    "${dms_path}/services/dtbschedmgr/include/collaborate/",
    "${dms_path}/services/dtbschedmgr/include/dfx/",
    "${dms_path}/services/dtbschedmgr/test/unittest",
    "${dms_path}/services/dtbschedmgr/include/softbus_adapter/transport/",
    "${dms_path}/services/dtbschedmgr/include/collab/",
    "${dms_path}/services/dtbschedmgr/include/collab/state/",
    "${dms_path}/services/dtbschedmgr/include/collaborate/",
    "${dms_path}/services/dtbschedmgr/include/continue/",
    "${dms_path}/services/dtbschedmgr/include/continue/state/",
    "${dms_path}/services/dtbschedmgr/include/continue/state/transport/",
    "${dms_path}/test/fuzztest/distributedschedstub_fuzzer",
    "${dms_path}/test/fuzztest/util",
  ]
}

dsched_external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "ability_runtime:mission_info",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "cJSON:cjson",
    "c_utils:utils",
    "data_share:datashare_consumer",
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "device_manager:devicemanagersdk",
    "device_security_level:dslm_sdk",
    "distributed_bundle_framework:dbms_fwk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "init:libbegetutil",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "os_account:libaccountkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  if (dmsfwk_standard_form_share) {
    dsched_external_deps += [ "form_fwk:form_manager" ]
  }
  if (os_account_part) {
    dsched_external_deps += [ "os_account:os_account_innerkits" ]
  }

ohos_fuzztest("DistributedSchedStubFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstub_fuzzer/distributedschedstub_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubOneFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubone_fuzzer/distributedschedstubone_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubTwoFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubtwo_fuzzer/distributedschedstubtwo_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubThreeFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubthree_fuzzer/distributedschedstubthree_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubFourFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubfour_fuzzer/distributedschedstubfour_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubFiveFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubfive_fuzzer/distributedschedstubfive_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubSixFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubsix_fuzzer/distributedschedstubsix_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubSevenFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubseven_fuzzer/distributedschedstubseven_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubEightFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubeight_fuzzer/distributedschedstubeight_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubNineFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubnine_fuzzer/distributedschedstubnine_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedStubTenFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [
    "${dms_path}/services/dtbschedmgr/test/unittest/mock_distributed_sched.cpp",
    "${dms_path}/test/fuzztest/util/mock_fuzz_util.cpp",
    "distributedschedstubten_fuzzer/distributedschedstubten_fuzzer.cpp",
  ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedservice_fuzzer/distributedschedservice_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceOneFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedserviceone_fuzzer/distributedschedserviceone_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceTwoFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedservicetwo_fuzzer/distributedschedservicetwo_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceThreeFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedservicethree_fuzzer/distributedschedservicethree_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceFourFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedservicefour_fuzzer/distributedschedservicefour_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceFiveFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedservicefive_fuzzer/distributedschedservicefive_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceSixFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedservicesix_fuzzer/distributedschedservicesix_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceSevenFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedserviceseven_fuzzer/distributedschedserviceseven_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceEightFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedserviceeight_fuzzer/distributedschedserviceeight_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

ohos_fuzztest("DistributedSchedServiceNineFuzzTest") {
  module_out_path = module_output_path
  configs = [
    ":test_config",
    "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags"
  ]
  external_deps = dsched_external_deps
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]

  sources = [ "distributedschedservicenine_fuzzer/distributedschedservicenine_fuzzer.cpp" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  defines = []
  if (dmsfwk_mission_manager) {
    defines += [ "SUPPORT_DISTRIBUTED_MISSION_MANAGER" ]
  }
  if (dmsfwk_standard_form_share) {
    defines += [ "SUPPORT_DISTRIBUTED_FORM_SHARE" ]
  }
  if (os_account_part) {
    defines += [ "OS_ACCOUNT_PART" ]
  }
}

group("fuzztest") {
  testonly = true
  deps = [
    "abilityconnectionwrapperstub_fuzzer:fuzztest",
    "bundlemanagercallbackstub_fuzzer:fuzztest",
    "continuationmanager_fuzzer:fuzztest",
    "distributedwant_fuzzer:fuzztest",
    "distributedwantparams_fuzzer:fuzztest",
    "dmsfreeinstallcallbackstub_fuzzer:fuzztest",
    "dschedallconnectmanager_fuzzer:fuzztest",
    "dschedsoftbussession_fuzzer:fuzztest",
    "dschedtransportsoftbusadapter_fuzzer:fuzztest",
    "multiusermanager_fuzzer:fuzztest",
    "softbusadapter_fuzzer:fuzztest",
    "distributedoperation_fuzzer:fuzztest",
  ]

  if (!dmsfwk_softbus_adapter_common) {
    deps += [
      ":DistributedSchedStubFuzzTest",
      ":DistributedSchedStubOneFuzzTest",
      ":DistributedSchedStubTwoFuzzTest",
      ":DistributedSchedStubThreeFuzzTest",
      ":DistributedSchedStubFourFuzzTest",
      ":DistributedSchedStubFiveFuzzTest",
      ":DistributedSchedStubSixFuzzTest",
      ":DistributedSchedStubSevenFuzzTest",
      ":DistributedSchedStubEightFuzzTest",
      ":DistributedSchedStubNineFuzzTest",
      ":DistributedSchedStubTenFuzzTest",
      ":DistributedSchedServiceFuzzTest",
      ":DistributedSchedServiceOneFuzzTest",
      ":DistributedSchedServiceTwoFuzzTest",
      ":DistributedSchedServiceThreeFuzzTest",
      ":DistributedSchedServiceFourFuzzTest",
      ":DistributedSchedServiceFiveFuzzTest",
      ":DistributedSchedServiceSixFuzzTest",
      ":DistributedSchedServiceSevenFuzzTest",
      ":DistributedSchedServiceEightFuzzTest",
      ":DistributedSchedServiceNineFuzzTest",
    ]
  }
}
