# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
 
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//foundation/ability/dmsfwk/dmsfwk.gni")
 
ohos_executable("distributed_extension_test") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
 
  include_dirs = [
    "${distributed_service}/dExtensionDemo",
    "${dms_path}/common/include",
    "${dms_path}/interfaces/innerkits/common/include/",
    "${dms_path}/interfaces/innerkits/distributed_event/include/",
    "${dms_path}/services/dtbabilitymgr/include/",
    "${dms_path}/services/dtbschedmgr/include/",
    "${dms_path}/frameworks/native/distributed_extension/include",
    "${dms_path}/frameworks/native/distributed_extension/include/ipc"
  ]
 
  sources = [ "distribute_dextension_test.cpp" ]
 
  deps = ["${dms_path}/interfaces/innerkits/distributed_event:distributed_sdk"]
 
  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "device_manager:devicemanagersdk",
  ]
 
defines = [
    "HI_LOG_ENABLE",
    "LOG_TAG=\"distributetest\"",
    "LOG_DOMAIN=0xD004170",
    "DH_LOG_TAG=\"distributetest\"",
    "VERSION_STR=\"1.0.0.302\"",
    "DMS_SOURCE",
  ]
 
  install_enable = false
  part_name = "dmsfwk"
  subsystem_name = "ability"
}
 
group("dExtensionDemo") {
  testonly = true
  deps = [
    ":distributed_extension_test",
  ]
}